# Tickets-App

./: README.md  create_7z.py  meson.build
cmd/: main.cpp  meson.build
module/: meson.build
module/database/: database.cpp  database.hpp  meson.build
module/entities/: meson.build
module/entities/reservedTicket/: meson.build  reservedTicket.cpp  reservedTicket.hpp
module/entities/ticket/: meson.build  ticket.cpp  ticket.hpp
module/mock/: meson.build  mock.cpp  mock.hpp
module/styles/: meson.build  styles.cpp  styles.hpp
module/utils/: meson.build  utils.cpp  utils.hpp
navigation/: meson.build
navigation/router/: meson.build  router.cpp  router.hpp
navigation/routes/: meson.build  routes.cpp  routes.hpp
navigation/screens/: meson.build
navigation/screens/about/: about.cpp  about.hpp  meson.build
navigation/screens/all_reserved_tickets/: all_reserved_tickets.cpp  all_reserved_tickets.hpp  meson.build
navigation/screens/all_tickets/: all_tickets.cpp  all_tickets.hpp  meson.build
navigation/screens/reserved_ticket/: meson.build  reserved_ticket.cpp  reserved_ticket.hpp
tests/: db_test.cpp  meson.build
