project('tickets app','cpp',
    version: '0.0.1',
    default_options: [
                'warning_level=3', 
                'cpp_std=c++20',
                'c_std=c20',
                'default_library=static',
                'buildtype=debug',
                'cpp_module=true'
                ]
)

subdir('module')
subdir('cmd')