executable('tickets app', 
                'main.cpp',
                link_with: [
                    styles_lib,
                    utils_lib,
                    database_lib,
                    ticket_lib,
                    reservedTicket_lib,
                    router_lib,
                ],
                include_directories: [
                    styles_includes,
                    utils_includes,
                    database_includes,
                    ticket_includes,
                    reservedTicket_includes,
                    router_includes,
                ]
)