executable('tickets app', 
                'main.cpp',
                link_with: [
                    about_lib,
                    all_tickets_lib,
                    reserved_ticket_lib,
                    all_reserved_tickets_lib,
                    styles_lib,
                    database_lib,
                    ticket_lib,
                    reservedTicket_lib,
                    utils_lib,
                    mock_lib,
                    router_lib,
                    routes_lib,
                ],
                include_directories: [
                    appconf_includes,
                    about_includes,
                    all_tickets_includes,
                    reserved_ticket_includes,
                    all_reserved_tickets_includes,
                    styles_includes,
                    database_includes,
                    ticket_includes,
                    reservedTicket_includes,
                    mock_includes,
                    router_includes,
                    utils_includes,
                    routes_includes,
                ]
)