routes_lib = library('routes', 'routes.cpp', include_directories: [router_includes,
                                                                   about_includes,
                                                                   all_tickets_includes,
                                                                   reserved_ticket_includes,
                     ])
routes_includes = include_directories('.')