all_reserved_tickets_lib = library('all_reserved_tickets', 'all_reserved_tickets.cpp', include_directories: [
                                   appconf_includes,
                                   router_includes,
                                   styles_includes,
                                   reservedTicket_includes,
                                   database_includes,
                                   utils_includes,
                               ]
)
all_reserved_tickets_includes = include_directories('.')