
all_tickets_lib = library('all_tickets', 'all_tickets.cpp', include_directories: [
                              appconf_includes,
                              router_includes,
                              styles_includes,
                              ticket_includes,
                              database_includes,
                              utils_includes,
                          ]
)
all_tickets_includes = include_directories('.')