
reserved_ticket_lib = library('reserved_ticket', 'reserved_ticket.cpp', include_directories: [
                                  appconf_includes,
                                  reservedTicket_includes,
                                  ticket_includes,
                                  styles_includes,
                                  database_includes,
                                  utils_includes,
                              ])
reserved_ticket_includes = include_directories('.')